# cards

./: .gitignore  pyproject.toml  words.bu  words.txt
cards/: __init__.py
